# raw_locator_generator

./: .gitignore  DOCUMENTATION_INDEX.txt  FRAMEWORK_COMPARISON.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: EXAMPLE_OUTPUT.txt  GETTING_STARTED.txt  START_HERE.txt  WORKFLOW_DIAGRAM.txt
examples/: README.md
src/raw_locator_generator/: __init__.py  __main__.py  dom_extractor_agent.py
tests/: README.md
